# adventofcode-2023

./: aoc2023.cabal  flake.nix
lib/: Vec.hs
src/day-01-a/: Main.hs
src/day-01-b/: Main.hs
src/day-02-a/: Main.hs
src/day-02-b/: Main.hs
src/day-03-a/: Main.hs
src/day-03-b/: Main.hs
src/day-04-a/: Main.hs
src/day-04-b/: Main.hs
src/day-05-a/: Main.hs
src/day-05-b/: Main.hs
