cabal-version: 3.4

name:               aoc2023
version:            0.1.0.0
license:            MIT
license-file:       LICENSE

author:             Florian Walter
maintainer:         nairolf.retlaw@gmail.com

build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import: warnings
    exposed-modules: MyLib
    build-depends:
      base ^>=4.17.2.1
    hs-source-dirs: lib
    default-language: Haskell2010

executable day-01-a
    import: warnings
    main-is: Main.hs
    build-depends:
        base ^>=4.17.2.1,
        aoc2023
    hs-source-dirs: src/day-01-a
    default-language: Haskell2010

executable day-01-b
    import: warnings
    main-is: Main.hs
    build-depends:
        base ^>=4.17.2.1,
        aoc2023
    hs-source-dirs: src/day-01-b
    default-language: Haskell2010
